redome-front/hml-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: redome-front-svc
  namespace: hml
spec:
  type: NodePort
  selector:
    app: redome-front
    namespace: hml
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redome-front-deployment
  namespace: hml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redome-front
      namespace: hml
  template:
    metadata:
      labels:
        app: redome-front
        namespace: hml
    spec:
      hostname: redome-front
      subdomain: redome-front-svc
      containers:
        - name: redome-front
          image: $IMAGE_NAME
          resources:
            requests:
              cpu: "100m"
              memory: "768Mi"
            limits:
              cpu: "100m"
              memory: "1536Mi"
          ports:
            - containerPort: 80
